--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,9 @@
     </header>
     <div class="converter-box">
         <form id="converter-form">
-            <textarea id="video-url" placeholder="Paste link here" required></textarea>
+            <div class="input-container">
+                <textarea id="video-url" placeholder="Paste link here" required></textarea>
+            </div>
             <button id="generate-button" type="submit" style="background-color: #3e5c7b; color: white;">
                 <i id="cog-icon" class="fas fa-cog"></i> Generate Link
             </button>
