added video quality 1080p,720p,360p, 144p

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,11 +34,10 @@
             <img id="thumbnail" src="" alt="Video Thumbnail">
             <p id="title"></p>
             <p id="length"></p>
-            <select id="quality" hidden>
-                <option value="1080p">1080p</option>
-                <option value="360p">360p</option>
-            </select>
-            <button id="download-button" style="background-color: #3e5c7b; color: white;"><i class="fa fa-download" aria-hidden="true"></i> Download</button>
+            <select id="quality"></select>
+            <button id="download-button" style="background-color: #3e5c7b; color: white;">
+                <i class="fa fa-download" aria-hidden="true"></i> Download
+            </button>
         </div>
         <p class="note">💡Generate for free. No signup needed</p>
     </div>
