--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,21 +24,24 @@
     <div class="converter-box">
         <form id="converter-form">
             <div class="input-container" id="input-container">
-                <textarea id="video-url" placeholder="Paste link here" required></textarea>
+                <textarea id="video-url" placeholder="Paste youtube link here" required></textarea>
                 <button id="generate-button" type="submit" style="background-color: #3e5c7b; color: white;">
                     <i id="cog-icon" class="fas fa-cog"></i> Generate Link
                 </button>
             </div>
         </form>
-        <div id="video-info" style="display: none;">
-            <img id="thumbnail" src="" alt="Video Thumbnail">
-            <p id="title"></p>
-            <p id="length"></p>
-            <select id="quality"></select>
-            <button id="download-button" style="background-color: #3e5c7b; color: white;">
+        <div id="video-info" style="display: none; text-align: center; max-width: 400px; margin: auto; border: 1px solid #ccc; border-radius: 10px; padding: 20px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
+            <div id="thumbnail-container">
+                <img id="thumbnail" src="" alt="Video Thumbnail" style="width: 100%; border-radius: 10px; cursor: pointer;">
+            </div>
+            <p id="title" style="font-weight: bold; font-size: 18px; margin: 10px 0;"></p>
+            <p id="length" style="color: #666; margin-bottom: 20px;"></p>
+            <label for="quality" style="display: block; margin-bottom: 10px; font-weight: bold;">Select Quality:</label>
+            <select id="quality" style="width: 100%; padding: 10px; border-radius: 5px; border: 1px solid #ccc; margin-bottom: 20px;"></select>
+            <button id="download-button" style="background-color: #3e5c7b; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">
                 <i class="fa fa-download" aria-hidden="true"></i> Download
             </button>
-        </div>
+        </div>                      
         <p class="note">💡Generate for free. No signup needed</p>
     </div>
     <footer>
