change: responsive on mobile

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,5 +2,5 @@
 </html>
 <footer>
     <div class="footer-line"></div>
-    <p style="font-size: 80%;">Developed with <span class="blue-heart">&#x1F499;</span> by Ram Ortega</p>
+    <p style="font-size: 80%;">Developed with <span class="blue-heart">&#x1F499;</span> by <b>Ram Ortega</b></p>
 </footer>
