--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,4 +6,9 @@
     <title><%= title %></title>
     <link rel="stylesheet" href="/css/home.css">
 </head>
+
+<header>
+    <div class="menu-icon">&#9776;</div>
+    <h1>Tools To Go</h1>
+</header>
 <body>
