change: added icons

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,11 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="/css/home.css">
 </head>
 
 <header>
     <div class="menu-icon">&#9776;</div>
     <h1>Tools To Go</h1>
-</header>
+    <div class="header-icons">
+      <a href="https://www.facebook.com/" target="_blank" class="icon fb" style="font-size: 20px; color: black;">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="https://github.com/" target="_blank" class="icon github" style="font-size: 20px; color: black;">
+        <i class="fab fa-github"></i>
+      </a>
+      <a href="https://www.instagram.com/" target="_blank" class="icon instagram" style="font-size: 20px; color: black;">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <i id="light-dark-toggle" class="fas fa-moon" style="font-size: 20px; color: black;"></i> </div>
+      <span class="buy-me-coffee">Buy Me a Coffee</span>
+  </header>
+  
 <body>
