--- a/public/css/home.css
+++ b/public/css/home.css
@@ -42,9 +42,18 @@ header {
     display: flex; 
     align-items: center;
     padding: 8px; 
-    font-family: Arial, sans-serif; 
+    font-family: Arial, sans-serif;
+    margin-left: 20px; 
+  }
+.header-icons {
+    display: flex;
+    margin-left: auto;
+    margin-right: 30px; 
 }
 
+.icon {
+    margin-right: 10px;  
+  }
 .menu-icon {
     margin-right: 20px; 
     cursor: pointer;
@@ -53,7 +62,10 @@ header {
 h1 {
     margin: 0;
 }
-
+i {
+    font-size: 20px; 
+    color: black;
+  }
 .container {
     display: flex;
     flex-wrap: wrap;
