--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,7 +22,7 @@
         <i class="fab fa-instagram"></i>
       </a>
       <i id="light-dark-toggle" class="fas fa-moon" style="font-size: 20px; color: black;"></i> </div>
-      <span class="buy-me-coffee">Buy Me a Coffee</span>
+      <a href="https://www.buymeacoffee.com/yourusername" class="buy-me-coffee">Buy Me a Coffee</a>
   </header>
   
 <body>
