--- a/public/css/home.css
+++ b/public/css/home.css
@@ -70,8 +70,8 @@ i {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
-    padding: 20px;
-    width: 90%;
+    padding: 15px;
+    width: 75%;
     max-width: 1200px;
 }
 
@@ -82,7 +82,7 @@ i {
     overflow: hidden;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 0.15);
     background-color: white;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     transition: transform 0.3s, box-shadow 0.3s;
 }
 
@@ -136,19 +136,19 @@ i {
     padding: 20px;
 }
 
-.purple {
+.red {
     background-color: #c13e3e; /* Red color like YouTube */
 }
 
-.teal {
+.black {
     background-color: #292424; /* Black color like TikTok */
 }
 
-.red {
+.green {
     background-color: #1db954; /* Green color like Spotify */
 }
 
-.orange {
+.blue {
     background-color: #4267B2; /* Blue color like Facebook */
 }
 
@@ -174,11 +174,39 @@ i {
     background-color: #4267B2; /* Blue color like Facebook */
 }
 
+.buy-me-coffee {
+    background-color: #FFDD00; /* Yellow color like "Buy Me a Coffee" */
+    color: #000000; /* Black text color */
+    border: none;
+    padding: 10px 20px;
+    font-size: 1em;
+    border-radius: 25px;
+    margin: 10px 0;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    text-decoration: none; /* Remove underline for link appearance */
+    display: inline-block; /* Ensure button appears inline with text */
+    padding-left: 30px; /* Add padding on the left for icon */
+    position: relative; /* Set position to relative for absolute positioning of the icon */
+    margin-right: 2.0em;
+}
+
+.buy-me-coffee:hover {
+    background-color: #FFCC00; /* Darker yellow on hover */
+}
+
 /* Adjustments for mobile devices */
 @media only screen and (max-width: 768px) {
+    header h1 {
+        font-size: 2.0em; /* Reduce font size for smaller screens */
+        text-align: center; /* Center align the title */
+    }
     .container {
         width: 100%; 
         padding: 10px; 
+    }
+    .buy-me-coffee {
+        display: none; /* Hide "Buy Me a Coffee" on smaller screens */
     }
 
     .card {
