change: added support me button

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,7 +22,9 @@
         <i class="fab fa-instagram"></i>
       </a>
       <i id="light-dark-toggle" class="fas fa-moon" style="font-size: 20px; color: black;"></i> </div>
-      <a href="https://www.buymeacoffee.com/yourusername" class="buy-me-coffee">Buy Me a Coffee</a>
+      <a href="#" class="support-me">
+        <img src="/images/gcash.png" alt="GCash Icon" class="gcash-icon"> Support Me
+    </a>    
   </header>
   
 <body>
