--- a/public/css/home.css
+++ b/public/css/home.css
@@ -174,9 +174,9 @@ i {
     background-color: #4267B2; /* Blue color like Facebook */
 }
 
-.buy-me-coffee {
-    background-color: #FFDD00; /* Yellow color like "Buy Me a Coffee" */
-    color: #000000; /* Black text color */
+.support-me {
+    background-color: #097FFF; /* Yellow color like "Buy Me a Coffee" */
+    color: #ffffff; /* Black text color */
     border: none;
     padding: 10px 20px;
     font-size: 1em;
@@ -185,14 +185,20 @@ i {
     cursor: pointer;
     transition: background-color 0.3s;
     text-decoration: none; /* Remove underline for link appearance */
-    display: inline-block; /* Ensure button appears inline with text */
-    padding-left: 30px; /* Add padding on the left for icon */
-    position: relative; /* Set position to relative for absolute positioning of the icon */
-    margin-right: 2.0em;
+    display: inline-flex; /* Ensure button appears inline with icon */
+    align-items: center; /* Vertically center the icon and text */
+    margin-right: 1.5em;
 }
 
-.buy-me-coffee:hover {
-    background-color: #FFCC00; /* Darker yellow on hover */
+.support-me:hover {
+    background-color: #06072c; /* Darker yellow on hover */
+    color: #ffffff;
+}
+
+.gcash-icon {
+    width: 24px; /* Adjust the size of the icon */
+    height: 24px; /* Adjust the size of the icon */
+    margin-right: 8px; /* Space between icon and text */
 }
 
 /* Adjustments for mobile devices */
@@ -205,7 +211,7 @@ i {
         width: 100%; 
         padding: 10px; 
     }
-    .buy-me-coffee {
+    .support-me {
         display: none; /* Hide "Buy Me a Coffee" on smaller screens */
     }
 
