--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,17 +13,17 @@
     <h1 class="header-text">Tools To Go</h1>
     <div class="header-icons">
       <a href="https://www.facebook.com/" target="_blank" class="icon fb" style="font-size: 20px; color: black;">
-        <i class="fab fa-facebook-f"></i>
+        <i class="fab fa-facebook"></i>
       </a>
       <a href="https://github.com/" target="_blank" class="icon github" style="font-size: 20px; color: black;">
         <i class="fab fa-github"></i>
       </a>
-      <a href="https://www.instagram.com/" target="_blank" class="icon instagram" style="font-size: 20px; color: black;">
-        <i class="fab fa-instagram"></i>
-      </a>
+      <a href="#" target="_blank" class="icon info" style="font-size: 20px; color: black;">
+        <i class="fas fa-info-circle"></i>
+      </a>      
       <i id="light-dark-toggle" class="fas fa-moon" style="font-size: 20px; color: black;"></i> </div>
       <a href="#" class="support-me">
-        <img src="/images/gcash.png" alt="GCash Icon" class="gcash-icon"> Support Me
+        <i class="fas fa-hand-holding-usd" style="color: white;"></i> Support Me
     </a>    
   </header>
   
