--- a/views/tube-togo.ejs
+++ b/views/tube-togo.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Tube To Go</title>
+    <title>Tools To Go</title>
 </head>
 <body>
     <nav class="navbar">
