--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header', { title: 'To Go Services' }) %>
+<%- include('partials/header', { title: 'Tools To Go' }) %>
 
 <div class="container">
     <% const services = [
