--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,7 +10,7 @@
 
 <header>
     <div class="menu-icon">&#9776;</div>
-    <h1 class="header-text">Tools To Go</h1>
+    <a href="/" class="header-link"><h1 class="header-text">Tools To Go</h1></a>
     <div class="header-icons">
       <a href="https://www.facebook.com/" target="_blank" class="icon fb" style="font-size: 20px; color: black;">
         <i class="fab fa-facebook"></i>
