--- a/public/css/home.css
+++ b/public/css/home.css
@@ -229,21 +229,50 @@ i {
     .card {
         width: 100%; 
         margin-bottom: 10px; 
-    }
-
-    .text-section,
-    .image-section {
-        width: 100%;
-        padding: 10px; 
+        padding: 20px; /* Adjust padding */
     }
 
     .text-section h1 {
         font-size: 1.5em; 
     }
+
+    input[type="text"],
+    button {
+        width: 100%; /* Make input and buttons full width */
+    }
+
+    #generate-button {
+        padding: 10px; /* Adjust padding */
+        font-size: 1em; /* Adjust font size */
+    }
+
+    #video-info {
+        max-width: 100%; /* Adjust max-width */
+        margin-left: 0; /* Remove left margin */
+    }
+
+    #thumbnail {
+        width: 100%; /* Make thumbnail full width */
+    }
+
+    #title {
+        font-size: 16px; /* Adjust font size */
+    }
+
+    #length {
+        font-size: 14px; /* Adjust font size */
+    }
+
+    select,
+    #quality,
+    #download-button {
+        width: 100%; /* Make select and download button full width */
+        padding: 10px; /* Adjust padding */
+        font-size: 1em; /* Adjust font size */
+        margin-bottom: 10px; /* Adjust margin */
+    }
 }
-.spin-animation {
-    animation: spin 1s linear infinite;
-}
+
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
