--- a/public/css/home.css
+++ b/public/css/home.css
@@ -44,7 +44,7 @@ header {
     padding: 8px; 
     font-family: Arial, sans-serif;
     margin-left: 20px; 
-  }
+}
 .header-icons {
     display: flex;
     margin-left: auto;
@@ -57,7 +57,7 @@ header {
 
 .icon {
     margin-right: 10px;  
-  }
+}
 .menu-icon {
     margin-right: 20px; 
     cursor: pointer;
@@ -69,7 +69,7 @@ h1 {
 i {
     font-size: 20px; 
     color: black;
-  }
+}
 .container {
     display: flex;
     flex-wrap: wrap;
@@ -209,8 +209,9 @@ i {
     text-shadow: 
         1px 1px 0 #ccc,
         2px 2px 0 #bbb, 
-        3px 3px 0 #aaa,
+        3px 3px 0 #aaa;
 }
+
 
 /* Adjustments for mobile devices */
 @media only screen and (max-width: 768px) {
@@ -219,8 +220,9 @@ i {
         text-align: center; /* Center align the title */
     }
     .container {
-        width: 100%; 
+        width: 90%; 
         padding: 10px; 
+        margin-right: 0.5em;
     }
     .support-me {
         display: none; /* Hide "Buy Me a Coffee" on smaller screens */
@@ -233,7 +235,7 @@ i {
     }
 
     .text-section h1 {
-        font-size: 1.5em; 
+        font-size: 1.0em; 
     }
 
     input[type="text"],
@@ -271,6 +273,9 @@ i {
         font-size: 1em; /* Adjust font size */
         margin-bottom: 10px; /* Adjust margin */
     }
+}
+.spin-animation {
+    animation: spin 1s linear infinite;
 }
 
 @keyframes spin {
