--- a/views/tubetogo.ejs
+++ b/views/tubetogo.ejs
@@ -3,12 +3,12 @@
 <div class="container" style="display: flex; flex-direction: column; align-items: center;">
     <!-- Tube To Go -->
     <div class="text-section" style="display: flex; align-items: center; justify-content: center; flex-direction: column; text-align: center; background: none;">
-        <h1 style="color: #C13E3E; margin: 0; font-size: 2.5em; margin-bottom: -20px;">Tube To Go</h1>
+        <h1 class="text-header-title" style="color: #C13E3E; margin: 0; font-size: 2.5em; margin-bottom: -20px;">Tube To Go</h1>
     </div>
     <div class="card" style="border: 2px solid #C13E3E; padding: 40px; width: 80%; display: flex; justify-content: space-between; align-items: flex-start;">
         <form id="converter-form">
             <div style="width: 100%; margin-right: 20px;">
-                <h2 style="color: #C13E3E; margin-bottom: 20px;">Paste YouTube link here:</h2>
+                <h2 style="color: #C13E3E; margin-bottom: 20px;">Link here:</h2>
                 <input type="text" id="video-url" placeholder="ex:https://www.youtube.com/watch?qwerty" style="width: 93%; padding: 15px; margin-bottom: 20px; border: 1px solid #C13E3E; border-radius: 5px; background: none;" required>
                 <button class="more-button red" id="generate-button" type="submit" style="background-color: #C13E3E; color: white; padding: 15px; border: none; border-radius: 5px; font-size: 1.2em; width: 100%;">
                     <i id="cog-icon" class="fas fa-cog" style="color: white;"></i> Generate Link
