change: text-header on mobile

--- a/views/tubetogo.ejs
+++ b/views/tubetogo.ejs
@@ -3,7 +3,7 @@
 <div class="container" style="display: flex; flex-direction: column; align-items: center;">
     <!-- Tube To Go -->
     <div class="text-section" style="display: flex; align-items: center; justify-content: center; flex-direction: column; text-align: center; background: none;">
-        <h1 class="text-header-title" style="color: #C13E3E; margin: 0; font-size: 2.5em; margin-bottom: -20px;">Tube To Go</h1>
+        <h1 id="text-header-title" style="color: #C13E3E; margin: 0; font-size: 2.5em; margin-bottom: -20px;">TubeToGo</h1>
     </div>
     <div class="card" style="border: 2px solid #C13E3E; padding: 40px; width: 80%; display: flex; justify-content: space-between; align-items: flex-start;">
         <form id="converter-form">
