change: generate link -> generate

--- a/views/tubetogo.ejs
+++ b/views/tubetogo.ejs
@@ -11,7 +11,7 @@
                 <h2 style="color: #C13E3E; margin-bottom: 20px;">Link here:</h2>
                 <input type="text" id="video-url" placeholder="ex:https://www.youtube.com/watch?qwerty" style="width: 93%; padding: 15px; margin-bottom: 20px; border: 1px solid #C13E3E; border-radius: 5px; background: none;" required>
                 <button class="more-button red" id="generate-button" type="submit" style="background-color: #C13E3E; color: white; padding: 15px; border: none; border-radius: 5px; font-size: 1.2em; width: 100%;">
-                    <i id="cog-icon" class="fas fa-cog" style="color: white;"></i> Generate Link
+                    <i id="cog-icon" class="fas fa-cog" style="color: white;"></i> Generate
                 </button>
             </div>
         </form>  
