--- a/public/css/home.css
+++ b/public/css/home.css
@@ -70,6 +70,15 @@ i {
     font-size: 20px; 
     color: black;
 }
+.container-index {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    padding: 15px;
+    width: 75%;
+    max-width: 1200px;
+}
+
 .container {
     display: flex;
     flex-wrap: wrap;
@@ -219,11 +228,26 @@ i {
         font-size: 2.0em; /* Reduce font size for smaller screens */
         text-align: center; /* Center align the title */
     }
-    .container {
-        width: 90%; 
+    .container-index {
+        width: 100%;
         padding: 10px; 
         margin-right: 0.5em;
     }
+
+    .card .text-section .title-small {
+        font-size: 1.2em;
+    }
+
+    .card .text-section p {
+        font-size: small;
+        text-align: justify;
+    }
+    .container {
+        width: 100%; 
+        padding: 10px; 
+        margin-right: 0.5em;
+    }
+
     .support-me {
         display: none; /* Hide "Buy Me a Coffee" on smaller screens */
     }
